Update: align right macros

--- a/src/views/common/navigation/back-sign-out-link.njk
+++ b/src/views/common/navigation/back-sign-out-link.njk
@@ -10,7 +10,7 @@
     </div>
 
     {% if auth.isAuthenticated %}
-      <div  class="govuk-grid-column-one-third govuk-text-align-right">
+      <div  class="govuk-grid-column-one-third govuk-!-text-align-right">
         <a href="/auth/sign-out" class="govuk-link">Sign out</a>
       </div>
     {% endif %}
