--- a/src/views/common/sub-header/macro.njk
+++ b/src/views/common/sub-header/macro.njk
@@ -9,9 +9,8 @@
   </div>
 
   <div class="govuk-grid-column-one-third">
-      <h3 class="govuk-heading-s govuk-!-margin-bottom-1 sub-header-user-name govuk-text-align-right">{{ userName }}</h3>
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-1 sub-header-user-name govuk-!-text-align-right">{{ userName }}</h3>
   </div>
-
 </div>
 
 <hr class="govuk-section-break govuk-section-break--visible govuk-!-margin-bottom-0 govuk-!-margin-top-2">
