--- a/src/views/common/layout.njk
+++ b/src/views/common/layout.njk
@@ -8,6 +8,7 @@
 
 {% block head %}
   <link href="{{ getAssetPath('stylesheets/application.scss') }}" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="/favicon.ico?v=2">
   {% if metaDescription %}
     <meta name="description" content="{{ metaDescription }}">
   {% endif %}
