SFD2-429 Add New Service Navigation Component (#177)
* Add: new service navigation component

* Add: line breaks for readability

--- a/src/views/common/layout.njk
+++ b/src/views/common/layout.njk
@@ -1,13 +1,14 @@
 {% extends "govuk/template.njk" %}
 
 {% from "govuk/components/breadcrumbs/macro.njk" import govukBreadcrumbs %}
+{% from "govuk/components/service-navigation/macro.njk" import govukServiceNavigation %}
 
 {% from "common/heading/macro.njk" import appHeading %}
-
 {% set mainClasses = "app-main-wrapper" %}
 
 {% block head %}
   <link href="{{ getAssetPath('stylesheets/application.scss') }}" rel="stylesheet">
+
   {% if metaDescription %}
     <meta name="description" content="{{ metaDescription }}">
   {% endif %}
@@ -18,10 +19,14 @@
     homepageUrl: "https://www.gov.uk/",
     classes: "app-header",
     containerClasses: "govuk-width-container",
-    serviceName: serviceName,
-    serviceUrl: serviceUrl,
     useTudorCrown: true
   }) }}
+
+  {{ govukServiceNavigation({
+    serviceName: serviceName,
+    serviceUrl: serviceUrl
+  }) }}
+
   <div class="govuk-width-container">
     {% include "common/phase-banner/phase-banner.njk" %}
   </div>
