Fix: Business details vat number change links

--- a/src/views/business/business-details.njk
+++ b/src/views/business/business-details.njk
@@ -115,9 +115,7 @@
           value: {
             text: vatNumber
           },
-          actions: {
-            items: changeLinks.businessVatNumber
-          }
+          actions: changeLinks.businessVatNumber
         },
         {
           key: {
