--- a/src/views/unauthorised.njk
+++ b/src/views/unauthorised.njk
@@ -5,8 +5,8 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-l">Sorry, we are unable to sign you in.</h1>
-      <p class="govuk-body">Please <a class="govuk-link" href="/auth/sign-in">try again</a>.</p>
+      <h1 class="govuk-heading-l">You do not have permission to access this page</h1>
+      <p class="govuk-body">If you think you need to access this page, you can ask the business to raise your permission level.</p>
     </div>
   </div>
 {% endblock %}
