Update: Home view to make content dynamic

--- a/src/views/home.njk
+++ b/src/views/home.njk
@@ -18,7 +18,7 @@
 
       <h3 class="govuk-heading-m"> Business details</h3>
       <p>
-        <a href="/business-details">View and update your business details</a>
+        <a href={{businessDetails.link}}>{{businessDetails.text}}</a>
       </p>
       <h3 class="govuk-heading-m"> Personal details</h3>
       <p>
