--- a/src/views/home.njk
+++ b/src/views/home.njk
@@ -16,6 +16,10 @@
         You have signed in
       </h1>
 
+      <h3 class="govuk-heading-m"> Schemes and grants</h3>
+      <p>
+        <a href=https://ffc-ahwr-farmer-test.azure.defra.cloud/sign-in?ssoOrgId={{businessDetails.sbi}}>Funding to improve animal health and welfare</a>
+      </p>
       <h3 class="govuk-heading-m"> Business details</h3>
       <p>
         <a href={{businessDetails.link}}>{{businessDetails.text}}</a>
