Add IAHW endpoint configuration and update home view link

--- a/src/views/home.njk
+++ b/src/views/home.njk
@@ -18,7 +18,7 @@
 
       <h3 class="govuk-heading-m"> Schemes and grants</h3>
       <p>
-        <a href=https://ffc-ahwr-farmer-test.azure.defra.cloud/sign-in?ssoOrgId={{businessDetails.sbi}}>Funding to improve animal health and welfare</a>
+        <a href={{IAHWLink}}>Funding to improve animal health and welfare</a>
       </p>
       <h3 class="govuk-heading-m"> Business details</h3>
       <p>
