Refactor IAHWLink to iahwLink for consistency; update mock data and tests accordingly

--- a/src/views/home.njk
+++ b/src/views/home.njk
@@ -17,7 +17,7 @@
 
       <h3 class="govuk-heading-m"> Schemes and grants</h3>
       <p>
-        <a href={{IAHWLink}}>Funding to improve animal health and welfare</a>
+        <a href={{iahwLink}}>Funding to improve animal health and welfare</a>
       </p>
       <h3 class="govuk-heading-m"> Business details</h3>
       <p>
