Add: Custom CSS class for text wrapping

--- a/src/client/stylesheets/application.scss
+++ b/src/client/stylesheets/application.scss
@@ -4,3 +4,10 @@
 @use "core";
 @use "heading";
 @use "navigation";
+
+.text-wrap-no-hyphen {
+  overflow-wrap: anywhere;
+  word-break: break-word;
+  hyphens: none;
+  display: block;
+}
