Add: Custom CSS class to businessName and userName components

--- a/src/views/common/sub-header/macro.njk
+++ b/src/views/common/sub-header/macro.njk
@@ -2,14 +2,14 @@
 <div class="govuk-grid-row sub-header-container govuk-!-padding-top-3">
 
   <div class="govuk-grid-column-two-thirds">
-      <h3 class="govuk-heading-s govuk-!-margin-bottom-1">{{ businessName }}</h3>
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-1 text-wrap-no-hyphen">{{ businessName }}</h3>
       {% if sbi %}
       <p class="govuk-body-s govuk-!-margin-bottom-2">Single business identifier (SBI): {{ sbi }}</p>
       {% endif %}
   </div>
 
   <div class="govuk-grid-column-one-third">
-      <h3 class="govuk-heading-s govuk-!-margin-bottom-1 sub-header-user-name govuk-!-text-align-right">{{ userName }}</h3>
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-1 sub-header-user-name govuk-!-text-align-right text-wrap-no-hyphen">{{ userName }}</h3>
   </div>
 </div>
 
