--- a/src/views/home.njk
+++ b/src/views/home.njk
@@ -11,8 +11,8 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <span class="govuk-caption-xl">{{ fullName }}</span>
-      <h1 class="govuk-heading-xl govuk-!-margin-bottom-2">{{ businessName }}</h1>
+      <span class="govuk-caption-xl text-wrap-no-hyphen">{{ fullName }}</span>
+      <h1 class="govuk-heading-xl govuk-!-margin-bottom-2 text-wrap-no-hyphen">{{ businessName }}</h1>
       <p class="govuk-caption-m">Single business identifier (SBI): {{ sbi }}</p>
 
       <h3 class="govuk-heading-m"> Business details</h3>
