--- a/src/views/personal/personal-details.njk
+++ b/src/views/personal/personal-details.njk
@@ -20,7 +20,7 @@
         }) }}
       {% endif %}
 
-    <span  class="govuk-caption-l">{{fullName}}</span>
+    <span class="govuk-caption-l text-wrap-no-hyphen">{{fullName}}</span>
 
     <h1 class="govuk-heading-l">
       View and update your personal details
