Fix: username not showing on home page

--- a/src/views/home.njk
+++ b/src/views/home.njk
@@ -11,7 +11,7 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <span class="govuk-caption-xl text-wrap-no-hyphen">{{ fullName }}</span>
+      <span class="govuk-caption-xl text-wrap-no-hyphen">{{ userName }}</span>
       <h1 class="govuk-heading-xl govuk-!-margin-bottom-2 text-wrap-no-hyphen">{{ businessName }}</h1>
       <p class="govuk-caption-m">Single business identifier (SBI): {{ sbi }}</p>
 
