--- a/src/views/business/business-details.njk
+++ b/src/views/business/business-details.njk
@@ -99,54 +99,45 @@
     {# For styling reasons the first row in the summary list (SBI) needs to have the actions and items property
     initialised. This allows the VAT actions to format correctly. Without it the remove and change link wrap onto new
     lines #}
-    {{ govukSummaryList({
-      rows: [
+
+      {% set referenceRows = [
         {
-          key: {
-            text: "Single business identifier (SBI)"
-          },
-          value: {
-            text: sbi
-          },
-          actions: {
-            items: []
-          }
+          key: { text: "Single business identifier (SBI)" },
+          value: { text: sbi },
+          actions: { items: [] }
         },
         {
-          key: {
-            text: 'VAT registration number'
-          },
-          value: {
-            text: vatNumber
-          },
+          key: { text: "VAT registration number" },
+          value: { text: vatNumber },
           actions: changeLinks.businessVatNumber
-        },
-        {
-          key: {
-            text: "Trader number"
-          },
-          value: {
-            text: tradeNumber
-          }
-        },
-        {
-          key: {
-            text: "Vendor registration number"
-          },
-          value: {
-            text: vendorRegistrationNumber
-          }
-        },
-        {
-          key: {
-            text: "County Parish Holding (CPH) numbers"
-          },
-          value: {
-            html: formattedCph
-          }
         }
-      ]
-    }) }}
+      ]%}
+
+      {% if tradeNumber and tradeNumber | length %}
+        {% set _ = referenceRows.push({
+            key: { text: "Trader number"},
+            value: { html: tradeNumber }
+          })
+        %}
+      {% endif %}
+
+      {% if vendorRegistrationNumber and vendorRegistrationNumber | length %}
+        {% set _ = referenceRows.push({
+            key: { text: "Vendor registration number" },
+            value: { html: vendorRegistrationNumber }
+          })
+        %}
+      {% endif %}
+
+      {% if countyParishHoldingNumbers and countyParishHoldingNumbers | length %}
+        {% set _ = referenceRows.push({
+            key: { text: countyParishHoldingNumbersText },
+            value: { html: formattedCph }
+          })
+        %}
+      {% endif %}
+
+    {{ govukSummaryList({ rows: referenceRows }) }}
 
     <h2 class="govuk-heading-m">
       Additional details
