--- a/src/views/business/business-details.njk
+++ b/src/views/business/business-details.njk
@@ -4,16 +4,31 @@
 {% from "govuk/components/notification-banner/macro.njk" import govukNotificationBanner %}
 {% from "common/sub-header/macro.njk" import subHeader %}
 {% from "common/navigation/back-sign-out-link.njk" import appBackSignOutLink with context %}
+{% from "govuk/components/button/macro.njk" import govukButton %}
+{% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 
 {% block beforeContent %}
   {{ subHeader(businessName=businessName, sbi=sbi, userName=userName) }}
-  {{ appBackSignOutLink(backLink) }}
 {% endblock %}
 
 {% block content %}
+<form method="post" novalidate>
+  <input type="hidden" name="crumb" value="{{ crumb }}">
+  <div class="govuk-form-group">
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
       {# Notification banner #}
+      {% if errors %}
+    {{ govukErrorSummary({
+      titleText: "There is a problem",
+      errorList: [
+        {
+          text: "Your address is invalid and must be updated for you to continue",
+          href: "#"
+        }
+      ]
+    }) }}
+      {% endif %}
       {% if notification %}
         {{ govukNotificationBanner({
           type: "success",
@@ -22,9 +37,7 @@
         }) }}
       {% endif %}
 
-    <h1 class="govuk-heading-l">
-      {{ pageTitle }}
-    </h1>
+    <h1 class="govuk-heading-l"> Update your business details</h1>
 
     <p class="govuk-body">
       {{permissionsText}}
@@ -102,40 +115,19 @@
 
       {% set referenceRows = [
         {
-          key: { text: "Single business identifier (SBI)" },
-          value: { text: sbi },
-          actions: { items: [] }
-        },
-        {
           key: { text: "VAT registration number" },
-          value: { text: vatNumber },
-          actions: changeLinks.businessVatNumber
+          value: { text: 'No number added'},
+          actions:{
+          items: [
+            {
+              href: '/business-phone-numbers-change',
+              text: 'Add',
+              visuallyHiddenText: 'business phone numbers'
+            }
+          ]
+        }
         }
       ]%}
-
-      {% if tradeNumber and tradeNumber | length %}
-        {% set _ = referenceRows.push({
-            key: { text: "Trader number"},
-            value: { html: tradeNumber }
-          })
-        %}
-      {% endif %}
-
-      {% if vendorRegistrationNumber and vendorRegistrationNumber | length %}
-        {% set _ = referenceRows.push({
-            key: { text: "Vendor registration number" },
-            value: { html: vendorRegistrationNumber }
-          })
-        %}
-      {% endif %}
-
-      {% if countyParishHoldingNumbers and countyParishHoldingNumbers | length %}
-        {% set _ = referenceRows.push({
-            key: { text: countyParishHoldingNumbersText },
-            value: { html: formattedCph }
-          })
-        %}
-      {% endif %}
 
     {{ govukSummaryList({ rows: referenceRows }) }}
 
@@ -167,4 +159,13 @@
     }) }}
   </div>
 </div>
+  <div class="govuk-button-group">
+    {{ govukButton({
+      text: "Save changes"
+    }) }}
+
+    <a class="govuk-link" href="business-details-view">Cancel</a>
+  </div>
+  </div>
+</form>
 {% endblock %}
