Update: vat display logic to conditionally format 'No number added'

--- a/src/views/business/business-details.njk
+++ b/src/views/business/business-details.njk
@@ -62,7 +62,7 @@
     {% endset %}
 
     {% set displayVatNumber %}
-      {% if vatNumber === 'Not added' %}
+      {% if vatNumber === 'No number added' %}
         <span class="govuk-hint display-inline">{{ vatNumber }}</span>
       {% else %}
         <span>{{ vatNumber }}</span>
