--- a/src/views/personal/personal-details.njk
+++ b/src/views/personal/personal-details.njk
@@ -13,10 +13,21 @@
   <div class="govuk-grid-column-two-thirds">
       {# Notification banner #}
       {% if notification %}
+        {% if notification.text.length > 1%}
+          {% set notificationHtml %}
+            <h3 class="govuk-notification-banner__heading">You have updated your:</h3>
+            <ul class="govuk-list govuk-list--bullet">
+              {% for item in notification.text %}
+                <li>{{ item }}</li>
+              {% endfor %}
+            </ul>
+          {% endset %}
+        {% endif %}
+
         {{ govukNotificationBanner({
           type: "success",
           titleText: notification.title,
-          text: notification.text
+          html: notificationHtml or notification.text
         }) }}
       {% endif %}
 
@@ -27,7 +38,7 @@
     </h1>
 
     {% set formattedAddress %}
-      {% for addressLine in address %}
+      {% for addressLine in personalAddress.address %}
         <div>{{addressLine}}</div>
       {% endfor %}
     {% endset %}
@@ -52,10 +63,10 @@
     {% endset %}
 
     {% set displayDOB %}
-      {% if dateOfBirth.dob === 'Not added' %}
-        <div><span class="govuk-hint display-inline">{{dateOfBirth.dob}}</span></div>
+      {% if dob.fullDateOfBirth %}
+        {{ dob.fullDateOfBirth }}
       {% else %}
-        <div>{{dateOfBirth.dob}}</div>
+        <div><span class="govuk-hint display-inline">Not added</span></div>
       {% endif %}
     {% endset %}
 
@@ -66,13 +77,13 @@
             text: "Full name"
           },
           value: {
-            text: fullName
+            text: personalName.fullName
           },
           actions: {
             items: [
               {
-                href: "/account-name-change",
-                text: "Change",
+                href: personalName.changeLink,
+                text: personalName.action,
                 visuallyHiddenText: "Full name"
               }
             ]
@@ -88,8 +99,8 @@
           actions: {
             items: [
               {
-                href: dateOfBirth.link,
-                text: dateOfBirth.action,
+                href: dob.changeLink,
+                text: dob.action,
                 visuallyHiddenText: "date of birth"
               }
             ]
@@ -113,8 +124,8 @@
           actions: {
             items: [
               {
-                href: "/account-address-change",
-                text: "Change",
+                href: personalAddress.changeLink,
+                text: personalAddress.action,
                 visuallyHiddenText: "personal address"
               }
             ]
@@ -130,7 +141,7 @@
           actions: {
             items: [
               {
-                href: personalTelephone.link,
+                href: personalTelephone.changeLink,
                 text: personalTelephone.action,
                 visuallyHiddenText: "personal phone numbers"
               }
@@ -147,7 +158,7 @@
           actions: {
             items: [
               {
-                href: personalEmail.link,
+                href: personalEmail.changeLink,
                 text: personalEmail.action,
                 visuallyHiddenText: "personal email address"
               }
