Update: personal-fix view text

--- a/src/views/personal/personal-fix.njk
+++ b/src/views/personal/personal-fix.njk
@@ -18,7 +18,7 @@
       </h1>
 
     {{ govukWarningText({
-      text: "Some of your details seem to be missing or incorrect. We need these details to contact you, or verify your identity if you phone us.",
+      text: "Some of your details seem to be missing or incorrect. We need these details to contact you, or to verify your identity if you phone us.",
       iconFallbackText: "Warning"
     }) }}
 
