Fix: Spacing in view

--- a/src/views/personal/personal-fix-list.njk
+++ b/src/views/personal/personal-fix-list.njk
@@ -29,10 +29,10 @@
             <h1 class="govuk-fieldset__heading">
               {{ pageTitle }}
             </h1>
-            <p>
-            We will use these details to contact you, or to verify your identity if you phone us.
-            </p>
           </legend>
+            <div><p>
+            We will use these details to contact you, or to verify your identity if you phone us.
+            </p></div>
 
         <div class="govuk-!-margin-top-4">
           {% for section in sections %}
