Update: business details presenter and view

--- a/src/views/business/business-details.njk
+++ b/src/views/business/business-details.njk
@@ -151,7 +151,7 @@
         %}
       {% endif %}
 
-      {% if countyParishHoldingNumbers and countyParishHoldingNumbers | length %}
+      {% if showCph and countyParishHoldingNumbers and countyParishHoldingNumbers | length %}
         {% set _ = referenceRows.push({
             key: { text: countyParishHoldingNumbersText },
             value: { html: formattedCph }
