Update: Business details view to use new notification banner

--- a/src/views/business/business-details.njk
+++ b/src/views/business/business-details.njk
@@ -18,8 +18,8 @@
         {{ govukNotificationBanner({
           type: "success",
           titleText: notification.title,
-          text: notification.text
-        }) }}
+          html: notification.html or notification.text
+        })}}
       {% endif %}
 
     <h1 class="govuk-heading-l">
